# Design-and-implementation-of-dual-core-IoT-terminal-system-based-on-STM32-ESP32

./: README.md
ESP_WIFI/: CMakeLists.txt  sdkconfig  sdkconfig.old  新建 文本文档.txt
ESP_WIFI/main/: CMakeLists.txt  main.c  my_command_manager.c  my_command_manager.h  my_crc.c  my_crc.h  my_frame.c  my_frame.h  my_mqtt.c  my_mqtt.h  my_semaphore.c  my_semaphore.h  my_task.c  my_task.h  my_topic.c  my_topic.h  my_uart.c  my_uart.h  my_wifi.c  my_wifi.h  tcp_client_v4.c  tcp_client_v4.h  tcp_client_v6.c
LED/: .mxproject  LED.ioc
LED/.eide/: eide.json
LED/Core/Inc/: stm32f1xx_it.h
LED/Core/Src/: adc.c  gpio.c  main.c  stm32f1xx_it.c  usart.c
LED/MDK-ARM/: LED.uvguix.Jay  LED.uvguix.JayJayBond  LED.uvoptx  LED.uvprojx  startup_stm32f103xb.lst
LED/MDK-ARM/.eide/: eide.json  env.ini  files.options.yml
LED/MDK-ARM/LED/: LED.axf  LED.build_log.htm  LED.hex  LED.htm  LED.lnp  LED.map  LED_LED.dep  adc.crf  adc.d  cmsis_os2.crf  cmsis_os2.d  croutine.d  croutine_1.crf  croutine_1.d  dma.crf  dma.d  event_groups.crf  event_groups.d  event_groups_1.d  freertos.crf  freertos.d  gpio.crf  gpio.d  heap_4.d  heap_4_1.crf  heap_4_1.d  i2c.crf  i2c.d  ied_driver.d  list.crf  list.d  list_1.d  main.crf  main.d  motor.crf  motor.d  motor_1.d  mpu6050.crf  mpu6050.d  mpu6050_1.d  (+111 more)
LED/My_code/My_C/: IED_Driver.c  motor.c  mpu6050.c  my_adc.c  my_control.c  my_crc.c  my_frame.c  my_led.c  my_oled.c  my_semaphore.c  my_task.c  my_tim.c  my_usart.c  oled_data.c  test.c
LED/My_code/My_h/: LED_Driver.h  motor.h  mpu6050.h  my_adc.h  my_control.h  my_crc.h  my_frame.h  my_led.h  (+7 more)
